--- a/modules/_righty-modal.scss
+++ b/modules/_righty-modal.scss
@@ -29,13 +29,14 @@
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: 0;
 	background-color: transparent;
 	pointer-events:none;
 	transition: $anime;
 	z-index: -1;
 	body.modal-on & {
 		// opacity: 1;
+		height: 100%;
 		background-color: transparentize($accent, 0.2);
 		z-index: 300;
 	}
@@ -63,11 +64,12 @@
 		left: 50%;
 		top: -50%;
 		bottom: auto;
+    	backface-visibility: hidden;
+-webkit-filter: blur(0); // removes blurry text from transformed text
 -webkit-transform: translateX(-50%) translateY(-50%);
     -ms-transform: translateX(-50%) translateY(-50%);
         transform: translateX(-50%) translateY(-50%);
 	}
-
 	&.show-time {
 		opacity: 1;
 		top:0;
